--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
                     <li><a href="#">Technologies</a></li>
                 </ul>
             </nav>
+            <div class="socials">
+                <a href="https://github.com/aryankhatana01" target="”_blank”">
+                    <img src="./assets/github.svg" class="github" alt="github" draggable="false">
+                </a>
+                <a href="https://www.linkedin.com/in/akhatana/" target="”_blank”">
+                    <img width="22px" src="./assets/linkedin_alt.svg" class="linkedin" alt="github" draggable="false">
+                </a>
+                <a href="mailto:aryankhatana01@gmail.com" target="”_blank”">
+                    <img width="24px" src="./assets/gmail.svg" class="gmail" alt="github" draggable="false">
+                </a>
+            </div>
         </header>
     </div>
     <div class="wrapper">
