about section completed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,15 @@
         </header>
     </div>
     <div class="wrapper">
-        
+        <section class="about-me">
+            <div class="section-title">
+                <h2>About Me</h2>
+            </div>
+            <div class="about-content">
+                <p>👋 Hi, there!</p>
+                <p>I'm <strong>Aryan Khatana</strong>, a sophomore majoring in <strong>CS and Applied Mathematics</strong>. I'm a <strong>Machine Learning and Data Science</strong> enthusiast with some experience working on Kaggle competitions and winning a couple of medals. I've also interned at an AI startup and contributed to Open Source repositories on Github. I'm currently working on a few projects, and I'm always looking for new opportunities to learn and grow.</p>
+            </div>
+        </section>
     </div>
 </body>
 </html>
