added an experience

--- a/index.html
+++ b/index.html
@@ -46,6 +46,36 @@
                 <p>I'm <strong>Aryan Khatana</strong>, a sophomore majoring in <strong>CS and Applied Mathematics</strong>. I'm a <strong>Machine Learning and Data Science</strong> enthusiast with some experience working on Kaggle competitions and winning a couple of medals. I've also interned at an AI startup and contributed to Open Source repositories on Github. I'm currently working on a few projects, and I'm always looking for new opportunities to learn and grow.</p>
             </div>
         </section>
+        <section class="exp-section">
+            <div class="section-title">
+                <h2>Experience</h2>
+            </div>
+            <div class="exp-content">
+                <div class="exp1">
+                    <div class="content-left-exp1">
+                        <div class="exp-title">
+                            <h3>Machine Learning Intern</h3>
+                        </div>
+                        <p>Oct 2021 - May 2022 | Remote</p>
+                        <div class="flex-container">
+                            <div class="exp1-content">
+                                <ul class="bullets">
+                                    <li class="bullet-text">Working on AWS and GCP Cloud Integration for our platform.</li>
+                                    <li class="bullet-text">Implementing different Deep Learning techniques and research papers for faster and more efficient model training benefitting the end-user.</li>
+                                    <li class="bullet-text">Writing testing scripts and benchmarking different Deep Learning models.</li>
+                                    <li class="bullet-text">Researching and Implementing Self-Supervised Learning models.</li>
+                                    <li class="bullet-text">Porting PyTorch code into TensorFlow and PyTorch Lightning.</li>
+                                    <li class="bullet-text">Allocating GPU based on the user's computational requirements.</li>
+                                    <li class="bullet-text">Creating and working with Docker containers on different cloud computing platforms.</li>
+                                    <li class="bullet-text">Web scraping GPU pricing from different cloud providers.</li>
+                                </ul>
+                            </div>
+                            <img src="./assets/scaletorch.jpeg" class="scaletorch-logo" draggable="false">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
