experience section completed

--- a/index.html
+++ b/index.html
@@ -75,6 +75,57 @@
                     </div>
                 </div>
             </div>
+
+            <div class="exp-content-2">
+                <div class="exp1">
+                    <div class="content-left-exp1">
+                        <div class="exp-title">
+                            <h3>Machine Learning Freelancer</h3>
+                        </div>
+                        <p>Aug 2022 - Oct 2022 | Remote</p>
+                        <div class="flex-container">
+                            <div class="exp1-content">
+                                <ul class="bullets">
+                                    <li class="bullet-text">Implemented various Non-Linear Activation Functions in Pytorch and Tensforflow for Ivy.</li>
+                                    <li class="bullet-text">Wrote Documentation in various functions and methods for the Library.</li>
+                                    <li class="bullet-text">Implemented various Loss Fucntions in Pytorch and ported them for Ivy.</li>
+                                </ul>
+                            </div>
+                            <img src="./assets/ivy.jpeg" class="ivy-logo" draggable="false">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="exp-content-2">
+                <div class="exp1">
+                    <div class="content-left-exp1">
+                        <div class="exp-title">
+                            <h3>Kaggle Competitions Expert</h3>
+                        </div>
+                        <p>June 2019 - Present | Remote</p>
+                        <div class="flex-container">
+                            <div class="exp1-content">
+                                <ul class="bullets">
+                                    <li class="bullet-text">Silver Medal in Pawpularity Contest.</li>
+                                    <li class="bullet-text">Bronze Medal in HappyWhale Contest.</li>
+                                    <li class="bullet-text">Top 10% in Cassava Leaf Disease Prediction(Lost a Bronze medal by 1 rank).</li>
+                                    <li class="bullet-text">Silver Medal in Lish-MoA by MIT and Harvard.</li>
+                                    <li class="bullet-text">Won a $1000 GCP gift card in Google's Fotball research for Manchester United Competition.</li>
+                                    <li class="bullet-text">Top 14% in Rainforest Connection Audio Detection Competition</li>
+                                    <li class="bullet-text">Top 11% in RiiiD Answer Correctness Prediction.</li>
+                                </ul>
+                            </div>
+                            <img src="./assets/kaggle.jpg" class="kaggle-logo" draggable="false">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="projects-section">
+            <div class="section-title">
+                <h2>Projects</h2>
+            </div>
         </section>
     </div>
 </body>
