--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 <li class="bullet-text">A demo can be found here: <a href="https://drive.google.com/file/d/12bNm0sFw0kl935zYHM9wJ13M9ViJ0Di-/view?usp=sharing" target=”_blank”><strong>Demo</strong></a></li>
                             </ul>
                         </div>
-                        <svg width="300" height="100" viewBox="0 0 151 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="melodet" width="300" height="100" viewBox="0 0 151 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <circle cx="10.7188" cy="26.0312" r="10.7188" fill="#FF6C6C"/>
                             <circle cx="22.9688" cy="10.7188" r="10.7188" fill="#A7FFAA"/>
                             <circle cx="26.0312" cy="38.2812" r="10.7188" fill="#F095FF"/>
