--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Software Developer Portfolio</title>
-    <meta name="description" content="Minimal, modern software developer portfolio: intro, experience timeline, projects, skills, achievements." />
+    <title>Aryan Khatana | Software Engineer</title>
+    <meta name="description" content="Aryan Khatana's developer portfolio" />
     <meta name="author" content="Lovable" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Software Developer Portfolio" />
+    <meta property="og:title" content="Aryan Khatana | Software Engineer" />
     <meta property="og:description" content="A minimal, modern and compact portfolio." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
